карта у мест, исправления с прошлога сема + нововведения

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.9",
+    "@angular/cdk": "^15.0.0",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
@@ -18,6 +19,22 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@taiga-ui/addon-charts": "^3.51.0",
+    "@taiga-ui/addon-commerce": "^3.51.0",
+    "@taiga-ui/addon-doc": "^3.51.0",
+    "@taiga-ui/addon-mobile": "^3.51.0",
+    "@taiga-ui/addon-preview": "^3.51.0",
+    "@taiga-ui/addon-table": "^3.51.0",
+    "@taiga-ui/addon-tablebars": "^3.51.0",
+    "@taiga-ui/cdk": "^3.51.0",
+    "@taiga-ui/core": "^3.51.0",
+    "@taiga-ui/icons": "^3.51.0",
+    "@taiga-ui/kit": "^3.51.0",
+    "@taiga-ui/layout": "^3.51.0",
+    "@taiga-ui/styles": "^3.51.0",
+    "@tinkoff/ng-dompurify": "3.0.0",
+    "angular8-yandex-maps": "^15.0.0",
+    "dompurify": "2.2.9",
     "moment": "^2.29.4",
     "ngx-pagination": "^6.0.3",
     "ngx-star-rating": "^2.1.0",
@@ -30,6 +47,7 @@
     "@angular-devkit/build-angular": "^15.2.2",
     "@angular/cli": "~15.2.2",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/dompurify": "2.2.3",
     "@types/jasmine": "~4.3.0",
     "@types/uuid": "^9.0.1",
     "jasmine-core": "~4.5.0",
